[metadata]
name = kisekauto-shotgunllama
version = 0.0.1
author = Yaakov Schectman
author_email = yaakov.schectman@gmail.com
description = A utility for KisekaeII automation
long_description = file: README.txt
long_description_content_type = text/markdown
url = https://github.com/cppietime/Kisekauto
project_urls =
    Bug Tracker = https://github.com/cppietime/Kisekauto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src